Updated select statement (Q3)

--- a/Sparkify-Project-Notebook.ipynb
+++ b/Sparkify-Project-Notebook.ipynb
@@ -204,184 +204,184 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Rokia TraorÃÂ©</td>\n",
-       "      <td>Stefany</td>\n",
+       "      <td>Muse</td>\n",
+       "      <td>Jordan</td>\n",
        "      <td>F</td>\n",
-       "      <td>0</td>\n",
-       "      <td>White</td>\n",
-       "      <td>274.88608</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Hicks</td>\n",
+       "      <td>259.26485</td>\n",
        "      <td>free</td>\n",
-       "      <td>Lubbock, TX</td>\n",
-       "      <td>693</td>\n",
-       "      <td>Zen</td>\n",
-       "      <td>83</td>\n",
+       "      <td>Salinas, CA</td>\n",
+       "      <td>814</td>\n",
+       "      <td>Supermassive Black Hole [Phones Control Voltag...</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Camila</td>\n",
-       "      <td>Tucker</td>\n",
+       "      <td>Mobin Master Feat. Robin S.</td>\n",
+       "      <td>Jayden</td>\n",
        "      <td>M</td>\n",
        "      <td>1</td>\n",
-       "      <td>Garrison</td>\n",
-       "      <td>230.81751</td>\n",
+       "      <td>Fox</td>\n",
+       "      <td>428.64281</td>\n",
        "      <td>free</td>\n",
-       "      <td>Oxnard-Thousand Oaks-Ventura, CA</td>\n",
-       "      <td>555</td>\n",
-       "      <td>Abrazame  (Version Acustica)</td>\n",
-       "      <td>40</td>\n",
+       "      <td>New Orleans-Metairie, LA</td>\n",
+       "      <td>842</td>\n",
+       "      <td>Show Me Love</td>\n",
+       "      <td>101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Carl Thomas</td>\n",
-       "      <td>Tucker</td>\n",
+       "      <td>Duncan Dhu</td>\n",
+       "      <td>Bronson</td>\n",
        "      <td>M</td>\n",
        "      <td>0</td>\n",
-       "      <td>Garrison</td>\n",
-       "      <td>196.67546</td>\n",
+       "      <td>Harris</td>\n",
+       "      <td>211.90485</td>\n",
        "      <td>free</td>\n",
-       "      <td>Oxnard-Thousand Oaks-Ventura, CA</td>\n",
-       "      <td>698</td>\n",
-       "      <td>You Ain't Right (Album Version)</td>\n",
-       "      <td>40</td>\n",
+       "      <td>Eugene, OR</td>\n",
+       "      <td>827</td>\n",
+       "      <td>Rozando La Eternidad</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>N.E.R.D.</td>\n",
-       "      <td>James</td>\n",
+       "      <td>New Found Glory</td>\n",
+       "      <td>Bronson</td>\n",
        "      <td>M</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Martin</td>\n",
-       "      <td>242.99057</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Harris</td>\n",
+       "      <td>222.69342</td>\n",
        "      <td>free</td>\n",
-       "      <td>Dallas-Fort Worth-Arlington, TX</td>\n",
-       "      <td>78</td>\n",
-       "      <td>Provider (Remix Radio Edit)</td>\n",
-       "      <td>79</td>\n",
+       "      <td>Eugene, OR</td>\n",
+       "      <td>827</td>\n",
+       "      <td>the king of wishful thinking</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Lil Jon / The East Side Boyz / DJ Flexx</td>\n",
-       "      <td>Jacqueline</td>\n",
-       "      <td>F</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Lynch</td>\n",
-       "      <td>285.30893</td>\n",
-       "      <td>paid</td>\n",
-       "      <td>Atlanta-Sandy Springs-Roswell, GA</td>\n",
-       "      <td>589</td>\n",
-       "      <td>Aww Skeet Skeet</td>\n",
-       "      <td>29</td>\n",
+       "      <td>Reel Big Fish</td>\n",
+       "      <td>Bronson</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Harris</td>\n",
+       "      <td>210.65098</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Eugene, OR</td>\n",
+       "      <td>827</td>\n",
+       "      <td>Beer</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Enya</td>\n",
-       "      <td>Jacqueline</td>\n",
+       "      <td>3 Doors Down</td>\n",
+       "      <td>Ryann</td>\n",
        "      <td>F</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Lynch</td>\n",
-       "      <td>175.85587</td>\n",
-       "      <td>paid</td>\n",
-       "      <td>Atlanta-Sandy Springs-Roswell, GA</td>\n",
-       "      <td>589</td>\n",
-       "      <td>The Sun In The Stream</td>\n",
-       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Smith</td>\n",
+       "      <td>227.78730</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Palestine, TX</td>\n",
+       "      <td>905</td>\n",
+       "      <td>Pages</td>\n",
+       "      <td>92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Furthermore</td>\n",
-       "      <td>Jacqueline</td>\n",
+       "      <td>Hird</td>\n",
+       "      <td>Ryann</td>\n",
        "      <td>F</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Lynch</td>\n",
-       "      <td>278.41261</td>\n",
-       "      <td>paid</td>\n",
-       "      <td>Atlanta-Sandy Springs-Roswell, GA</td>\n",
-       "      <td>589</td>\n",
-       "      <td>We Need To Talk (She And I Album Version)</td>\n",
-       "      <td>29</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Smith</td>\n",
+       "      <td>396.64281</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Palestine, TX</td>\n",
+       "      <td>905</td>\n",
+       "      <td>Keep You Kimi (Feat. Yukimi Nagano)</td>\n",
+       "      <td>92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Kid Cudi / MGMT / Ratatat</td>\n",
-       "      <td>Jacqueline</td>\n",
+       "      <td>Vampire Weekend</td>\n",
+       "      <td>Ryann</td>\n",
        "      <td>F</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Lynch</td>\n",
-       "      <td>295.67955</td>\n",
-       "      <td>paid</td>\n",
-       "      <td>Atlanta-Sandy Springs-Roswell, GA</td>\n",
-       "      <td>589</td>\n",
-       "      <td>Pursuit Of Happiness (nightmare)</td>\n",
-       "      <td>29</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Smith</td>\n",
+       "      <td>255.81669</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Palestine, TX</td>\n",
+       "      <td>905</td>\n",
+       "      <td>M79 (Album)</td>\n",
+       "      <td>92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Crosby_ Stills &amp; Nash</td>\n",
-       "      <td>Jacqueline</td>\n",
+       "      <td>Scars On Broadway</td>\n",
+       "      <td>Chloe</td>\n",
        "      <td>F</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Lynch</td>\n",
-       "      <td>186.90567</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cuevas</td>\n",
+       "      <td>187.34975</td>\n",
        "      <td>paid</td>\n",
-       "      <td>Atlanta-Sandy Springs-Roswell, GA</td>\n",
-       "      <td>589</td>\n",
-       "      <td>Haven't We Lost Enough?  (LP Version)</td>\n",
-       "      <td>29</td>\n",
+       "      <td>San Francisco-Oakland-Hayward, CA</td>\n",
+       "      <td>930</td>\n",
+       "      <td>Insane</td>\n",
+       "      <td>49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Passion Pit</td>\n",
-       "      <td>Jacqueline</td>\n",
+       "      <td>Death From Above 1979</td>\n",
+       "      <td>Chloe</td>\n",
        "      <td>F</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Lynch</td>\n",
-       "      <td>174.75873</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Cuevas</td>\n",
+       "      <td>153.88689</td>\n",
        "      <td>paid</td>\n",
-       "      <td>Atlanta-Sandy Springs-Roswell, GA</td>\n",
-       "      <td>589</td>\n",
-       "      <td>Sleepyhead</td>\n",
-       "      <td>29</td>\n",
+       "      <td>San Francisco-Oakland-Hayward, CA</td>\n",
+       "      <td>930</td>\n",
+       "      <td>Cold War</td>\n",
+       "      <td>49</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    artist   firstName gender  itemInSession  \\\n",
-       "0                          Rokia TraorÃÂ©     Stefany      F              0   \n",
-       "1                                   Camila      Tucker      M              1   \n",
-       "2                              Carl Thomas      Tucker      M              0   \n",
-       "3                                 N.E.R.D.       James      M              0   \n",
-       "4  Lil Jon / The East Side Boyz / DJ Flexx  Jacqueline      F              3   \n",
-       "5                                     Enya  Jacqueline      F              4   \n",
-       "6                              Furthermore  Jacqueline      F              5   \n",
-       "7                Kid Cudi / MGMT / Ratatat  Jacqueline      F              6   \n",
-       "8                    Crosby_ Stills & Nash  Jacqueline      F              7   \n",
-       "9                              Passion Pit  Jacqueline      F              8   \n",
+       "                        artist firstName gender  itemInSession lastName  \\\n",
+       "0                         Muse    Jordan      F              3    Hicks   \n",
+       "1  Mobin Master Feat. Robin S.    Jayden      M              1      Fox   \n",
+       "2                   Duncan Dhu   Bronson      M              0   Harris   \n",
+       "3              New Found Glory   Bronson      M              1   Harris   \n",
+       "4                Reel Big Fish   Bronson      M              2   Harris   \n",
+       "5                 3 Doors Down     Ryann      F              0    Smith   \n",
+       "6                         Hird     Ryann      F              1    Smith   \n",
+       "7              Vampire Weekend     Ryann      F              2    Smith   \n",
+       "8            Scars On Broadway     Chloe      F              1   Cuevas   \n",
+       "9        Death From Above 1979     Chloe      F              2   Cuevas   \n",
        "\n",
-       "   lastName     length level                           location  sessionId  \\\n",
-       "0     White  274.88608  free                        Lubbock, TX        693   \n",
-       "1  Garrison  230.81751  free   Oxnard-Thousand Oaks-Ventura, CA        555   \n",
-       "2  Garrison  196.67546  free   Oxnard-Thousand Oaks-Ventura, CA        698   \n",
-       "3    Martin  242.99057  free    Dallas-Fort Worth-Arlington, TX         78   \n",
-       "4     Lynch  285.30893  paid  Atlanta-Sandy Springs-Roswell, GA        589   \n",
-       "5     Lynch  175.85587  paid  Atlanta-Sandy Springs-Roswell, GA        589   \n",
-       "6     Lynch  278.41261  paid  Atlanta-Sandy Springs-Roswell, GA        589   \n",
-       "7     Lynch  295.67955  paid  Atlanta-Sandy Springs-Roswell, GA        589   \n",
-       "8     Lynch  186.90567  paid  Atlanta-Sandy Springs-Roswell, GA        589   \n",
-       "9     Lynch  174.75873  paid  Atlanta-Sandy Springs-Roswell, GA        589   \n",
+       "      length level                           location  sessionId  \\\n",
+       "0  259.26485  free                        Salinas, CA        814   \n",
+       "1  428.64281  free           New Orleans-Metairie, LA        842   \n",
+       "2  211.90485  free                         Eugene, OR        827   \n",
+       "3  222.69342  free                         Eugene, OR        827   \n",
+       "4  210.65098  free                         Eugene, OR        827   \n",
+       "5  227.78730  free                      Palestine, TX        905   \n",
+       "6  396.64281  free                      Palestine, TX        905   \n",
+       "7  255.81669  free                      Palestine, TX        905   \n",
+       "8  187.34975  paid  San Francisco-Oakland-Hayward, CA        930   \n",
+       "9  153.88689  paid  San Francisco-Oakland-Hayward, CA        930   \n",
        "\n",
-       "                                        song  userId  \n",
-       "0                                        Zen      83  \n",
-       "1               Abrazame  (Version Acustica)      40  \n",
-       "2            You Ain't Right (Album Version)      40  \n",
-       "3                Provider (Remix Radio Edit)      79  \n",
-       "4                            Aww Skeet Skeet      29  \n",
-       "5                      The Sun In The Stream      29  \n",
-       "6  We Need To Talk (She And I Album Version)      29  \n",
-       "7           Pursuit Of Happiness (nightmare)      29  \n",
-       "8      Haven't We Lost Enough?  (LP Version)      29  \n",
-       "9                                 Sleepyhead      29  "
+       "                                                song  userId  \n",
+       "0  Supermassive Black Hole [Phones Control Voltag...      37  \n",
+       "1                                       Show Me Love     101  \n",
+       "2                               Rozando La Eternidad      33  \n",
+       "3                       the king of wishful thinking      33  \n",
+       "4                                               Beer      33  \n",
+       "5                                              Pages      92  \n",
+       "6                Keep You Kimi (Feat. Yukimi Nagano)      92  \n",
+       "7                                        M79 (Album)      92  \n",
+       "8                                             Insane      49  \n",
+       "9                                           Cold War      49  "
       ]
      },
      "execution_count": 5,
@@ -817,7 +817,7 @@
     "\n",
     "# Query 3: Give me every user name (first and last) in my music app history who listened to the song \n",
     "##'All Hands Against His Own'\n",
-    "query = \"SELECT * FROM songs_users_history WHERE song_title='All Hands Against His Own'\"\n",
+    "query = \"SELECT first_name, last_name FROM songs_users_history WHERE song_title='All Hands Against His Own'\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
