Updated select statement (Q1, Q2)

--- a/Sparkify-Project-Notebook.ipynb
+++ b/Sparkify-Project-Notebook.ipynb
@@ -204,184 +204,196 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Muse</td>\n",
-       "      <td>Jordan</td>\n",
-       "      <td>F</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Hicks</td>\n",
-       "      <td>259.26485</td>\n",
-       "      <td>free</td>\n",
-       "      <td>Salinas, CA</td>\n",
-       "      <td>814</td>\n",
-       "      <td>Supermassive Black Hole [Phones Control Voltag...</td>\n",
-       "      <td>37</td>\n",
+       "      <td>Barry Tuckwell/Academy of St Martin-in-the-Fie...</td>\n",
+       "      <td>Mohammad</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Rodriguez</td>\n",
+       "      <td>277.15873</td>\n",
+       "      <td>paid</td>\n",
+       "      <td>Sacramento--Roseville--Arden-Arcade, CA</td>\n",
+       "      <td>961</td>\n",
+       "      <td>Horn Concerto No. 4 in E flat K495: II. Romanc...</td>\n",
+       "      <td>88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Mobin Master Feat. Robin S.</td>\n",
-       "      <td>Jayden</td>\n",
+       "      <td>Jimi Hendrix</td>\n",
+       "      <td>Mohammad</td>\n",
        "      <td>M</td>\n",
        "      <td>1</td>\n",
-       "      <td>Fox</td>\n",
-       "      <td>428.64281</td>\n",
-       "      <td>free</td>\n",
-       "      <td>New Orleans-Metairie, LA</td>\n",
-       "      <td>842</td>\n",
-       "      <td>Show Me Love</td>\n",
-       "      <td>101</td>\n",
+       "      <td>Rodriguez</td>\n",
+       "      <td>239.82975</td>\n",
+       "      <td>paid</td>\n",
+       "      <td>Sacramento--Roseville--Arden-Arcade, CA</td>\n",
+       "      <td>961</td>\n",
+       "      <td>Woodstock Inprovisation</td>\n",
+       "      <td>88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Duncan Dhu</td>\n",
-       "      <td>Bronson</td>\n",
+       "      <td>Building 429</td>\n",
+       "      <td>Mohammad</td>\n",
        "      <td>M</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Harris</td>\n",
-       "      <td>211.90485</td>\n",
-       "      <td>free</td>\n",
-       "      <td>Eugene, OR</td>\n",
-       "      <td>827</td>\n",
-       "      <td>Rozando La Eternidad</td>\n",
-       "      <td>33</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Rodriguez</td>\n",
+       "      <td>300.61669</td>\n",
+       "      <td>paid</td>\n",
+       "      <td>Sacramento--Roseville--Arden-Arcade, CA</td>\n",
+       "      <td>961</td>\n",
+       "      <td>Majesty (LP Version)</td>\n",
+       "      <td>88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>New Found Glory</td>\n",
-       "      <td>Bronson</td>\n",
-       "      <td>M</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Harris</td>\n",
-       "      <td>222.69342</td>\n",
+       "      <td>The B-52's</td>\n",
+       "      <td>Gianna</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>321.54077</td>\n",
        "      <td>free</td>\n",
-       "      <td>Eugene, OR</td>\n",
-       "      <td>827</td>\n",
-       "      <td>the king of wishful thinking</td>\n",
-       "      <td>33</td>\n",
+       "      <td>New York-Newark-Jersey City, NY-NJ-PA</td>\n",
+       "      <td>107</td>\n",
+       "      <td>Love Shack</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Reel Big Fish</td>\n",
-       "      <td>Bronson</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Harris</td>\n",
-       "      <td>210.65098</td>\n",
+       "      <td>Die Mooskirchner</td>\n",
+       "      <td>Gianna</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>169.29914</td>\n",
        "      <td>free</td>\n",
-       "      <td>Eugene, OR</td>\n",
-       "      <td>827</td>\n",
-       "      <td>Beer</td>\n",
-       "      <td>33</td>\n",
+       "      <td>New York-Newark-Jersey City, NY-NJ-PA</td>\n",
+       "      <td>107</td>\n",
+       "      <td>Frisch und g'sund</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>3 Doors Down</td>\n",
-       "      <td>Ryann</td>\n",
+       "      <td>Carrie Underwood</td>\n",
+       "      <td>Gianna</td>\n",
        "      <td>F</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Smith</td>\n",
-       "      <td>227.78730</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>195.70893</td>\n",
        "      <td>free</td>\n",
-       "      <td>Palestine, TX</td>\n",
-       "      <td>905</td>\n",
-       "      <td>Pages</td>\n",
-       "      <td>92</td>\n",
+       "      <td>New York-Newark-Jersey City, NY-NJ-PA</td>\n",
+       "      <td>107</td>\n",
+       "      <td>Look At Me</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Hird</td>\n",
-       "      <td>Ryann</td>\n",
+       "      <td>No Te Va Gustar</td>\n",
+       "      <td>Kaylee</td>\n",
        "      <td>F</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Smith</td>\n",
-       "      <td>396.64281</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Summers</td>\n",
+       "      <td>246.43873</td>\n",
        "      <td>free</td>\n",
-       "      <td>Palestine, TX</td>\n",
-       "      <td>905</td>\n",
-       "      <td>Keep You Kimi (Feat. Yukimi Nagano)</td>\n",
-       "      <td>92</td>\n",
+       "      <td>Phoenix-Mesa-Scottsdale, AZ</td>\n",
+       "      <td>833</td>\n",
+       "      <td>Ya EntendÃÂ­</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Vampire Weekend</td>\n",
-       "      <td>Ryann</td>\n",
+       "      <td>The Velvet Underground / Nico</td>\n",
+       "      <td>Kaylee</td>\n",
        "      <td>F</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Smith</td>\n",
-       "      <td>255.81669</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Summers</td>\n",
+       "      <td>360.09751</td>\n",
        "      <td>free</td>\n",
-       "      <td>Palestine, TX</td>\n",
-       "      <td>905</td>\n",
-       "      <td>M79 (Album)</td>\n",
-       "      <td>92</td>\n",
+       "      <td>Phoenix-Mesa-Scottsdale, AZ</td>\n",
+       "      <td>833</td>\n",
+       "      <td>All Tomorrow's Parties</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Scars On Broadway</td>\n",
-       "      <td>Chloe</td>\n",
+       "      <td>Snoop Dogg / Jamie Foxx</td>\n",
+       "      <td>Kaylee</td>\n",
        "      <td>F</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Cuevas</td>\n",
-       "      <td>187.34975</td>\n",
-       "      <td>paid</td>\n",
-       "      <td>San Francisco-Oakland-Hayward, CA</td>\n",
-       "      <td>930</td>\n",
-       "      <td>Insane</td>\n",
-       "      <td>49</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Summers</td>\n",
+       "      <td>179.35628</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Phoenix-Mesa-Scottsdale, AZ</td>\n",
+       "      <td>833</td>\n",
+       "      <td>Psst!</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Death From Above 1979</td>\n",
-       "      <td>Chloe</td>\n",
+       "      <td>Dixie Chicks</td>\n",
+       "      <td>Kaylee</td>\n",
        "      <td>F</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Cuevas</td>\n",
-       "      <td>153.88689</td>\n",
-       "      <td>paid</td>\n",
-       "      <td>San Francisco-Oakland-Hayward, CA</td>\n",
-       "      <td>930</td>\n",
-       "      <td>Cold War</td>\n",
-       "      <td>49</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Summers</td>\n",
+       "      <td>201.01179</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Phoenix-Mesa-Scottsdale, AZ</td>\n",
+       "      <td>833</td>\n",
+       "      <td>There's Your Trouble</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        artist firstName gender  itemInSession lastName  \\\n",
-       "0                         Muse    Jordan      F              3    Hicks   \n",
-       "1  Mobin Master Feat. Robin S.    Jayden      M              1      Fox   \n",
-       "2                   Duncan Dhu   Bronson      M              0   Harris   \n",
-       "3              New Found Glory   Bronson      M              1   Harris   \n",
-       "4                Reel Big Fish   Bronson      M              2   Harris   \n",
-       "5                 3 Doors Down     Ryann      F              0    Smith   \n",
-       "6                         Hird     Ryann      F              1    Smith   \n",
-       "7              Vampire Weekend     Ryann      F              2    Smith   \n",
-       "8            Scars On Broadway     Chloe      F              1   Cuevas   \n",
-       "9        Death From Above 1979     Chloe      F              2   Cuevas   \n",
+       "                                              artist firstName gender  \\\n",
+       "0  Barry Tuckwell/Academy of St Martin-in-the-Fie...  Mohammad      M   \n",
+       "1                                       Jimi Hendrix  Mohammad      M   \n",
+       "2                                       Building 429  Mohammad      M   \n",
+       "3                                         The B-52's    Gianna      F   \n",
+       "4                                   Die Mooskirchner    Gianna      F   \n",
+       "5                                   Carrie Underwood    Gianna      F   \n",
+       "6                                    No Te Va Gustar    Kaylee      F   \n",
+       "7                      The Velvet Underground / Nico    Kaylee      F   \n",
+       "8                            Snoop Dogg / Jamie Foxx    Kaylee      F   \n",
+       "9                                       Dixie Chicks    Kaylee      F   \n",
        "\n",
-       "      length level                           location  sessionId  \\\n",
-       "0  259.26485  free                        Salinas, CA        814   \n",
-       "1  428.64281  free           New Orleans-Metairie, LA        842   \n",
-       "2  211.90485  free                         Eugene, OR        827   \n",
-       "3  222.69342  free                         Eugene, OR        827   \n",
-       "4  210.65098  free                         Eugene, OR        827   \n",
-       "5  227.78730  free                      Palestine, TX        905   \n",
-       "6  396.64281  free                      Palestine, TX        905   \n",
-       "7  255.81669  free                      Palestine, TX        905   \n",
-       "8  187.34975  paid  San Francisco-Oakland-Hayward, CA        930   \n",
-       "9  153.88689  paid  San Francisco-Oakland-Hayward, CA        930   \n",
+       "   itemInSession   lastName     length level  \\\n",
+       "0              0  Rodriguez  277.15873  paid   \n",
+       "1              1  Rodriguez  239.82975  paid   \n",
+       "2              2  Rodriguez  300.61669  paid   \n",
+       "3              0      Jones  321.54077  free   \n",
+       "4              1      Jones  169.29914  free   \n",
+       "5              2      Jones  195.70893  free   \n",
+       "6              0    Summers  246.43873  free   \n",
+       "7              1    Summers  360.09751  free   \n",
+       "8              2    Summers  179.35628  free   \n",
+       "9              3    Summers  201.01179  free   \n",
+       "\n",
+       "                                  location  sessionId  \\\n",
+       "0  Sacramento--Roseville--Arden-Arcade, CA        961   \n",
+       "1  Sacramento--Roseville--Arden-Arcade, CA        961   \n",
+       "2  Sacramento--Roseville--Arden-Arcade, CA        961   \n",
+       "3    New York-Newark-Jersey City, NY-NJ-PA        107   \n",
+       "4    New York-Newark-Jersey City, NY-NJ-PA        107   \n",
+       "5    New York-Newark-Jersey City, NY-NJ-PA        107   \n",
+       "6              Phoenix-Mesa-Scottsdale, AZ        833   \n",
+       "7              Phoenix-Mesa-Scottsdale, AZ        833   \n",
+       "8              Phoenix-Mesa-Scottsdale, AZ        833   \n",
+       "9              Phoenix-Mesa-Scottsdale, AZ        833   \n",
        "\n",
        "                                                song  userId  \n",
-       "0  Supermassive Black Hole [Phones Control Voltag...      37  \n",
-       "1                                       Show Me Love     101  \n",
-       "2                               Rozando La Eternidad      33  \n",
-       "3                       the king of wishful thinking      33  \n",
-       "4                                               Beer      33  \n",
-       "5                                              Pages      92  \n",
-       "6                Keep You Kimi (Feat. Yukimi Nagano)      92  \n",
-       "7                                        M79 (Album)      92  \n",
-       "8                                             Insane      49  \n",
-       "9                                           Cold War      49  "
+       "0  Horn Concerto No. 4 in E flat K495: II. Romanc...      88  \n",
+       "1                            Woodstock Inprovisation      88  \n",
+       "2                               Majesty (LP Version)      88  \n",
+       "3                                         Love Shack      38  \n",
+       "4                                  Frisch und g'sund      38  \n",
+       "5                                         Look At Me      38  \n",
+       "6                                      Ya EntendÃÂ­       8  \n",
+       "7                             All Tomorrow's Parties       8  \n",
+       "8                                              Psst!       8  \n",
+       "9                               There's Your Trouble       8  "
       ]
      },
      "execution_count": 5,
@@ -640,8 +652,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "session_id  item_in_session artist_name song_title                        song_length\n",
-      "338         4                Faithless   Music Matters (Mark Knight Dub)  495.3073\n"
+      "artist_name song_title                        song_length\n",
+      "Faithless   Music Matters (Mark Knight Dub)  495.3073\n"
      ]
     }
    ],
@@ -650,7 +662,8 @@
     "\n",
     "# Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \n",
     "## sessionId = 338, and itemInSession = 4\n",
-    "query = \"SELECT * FROM session_history WHERE session_id=338 AND item_in_session=4\"\n",
+    "query = \"SELECT artist_name, song_title, song_length FROM session_history \\\n",
+    "            WHERE session_id=338 AND item_in_session=4\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
@@ -658,10 +671,10 @@
     "    \n",
     "for row in rows:\n",
     "    # Convert rows to a list\n",
-    "    data = list(map(lambda row: [row.session_id, row.item_in_session, row.artist_name, row.song_title, row.song_length], rows))\n",
+    "    data = list(map(lambda row: [row.artist_name, row.song_title, row.song_length], rows))\n",
     "\n",
     "# Create a dataframe with column names\n",
-    "df1 = pd.DataFrame(data, columns=[\"session_id\", \"item_in_session\", \"artist_name\", \"song_title\", \"song_length\"])\n",
+    "df1 = pd.DataFrame(data, columns=[\"artist_name\", \"song_title\", \"song_length\"])\n",
     "\n",
     "print(df1.to_string(index=False, justify='left'))"
    ]
@@ -735,7 +748,7 @@
     "\n",
     "# Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
     "## for userid = 10, sessionid = 182\n",
-    "query = \"SELECT * FROM users_history WHERE user_id=10 AND session_id=182\"\n",
+    "query = \"SELECT artist_name, song_title, first_name, last_name FROM users_history WHERE user_id=10 AND session_id=182\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
